tests/build/fail/widget/new_fns_in_mixin.stderr
error: widget mixins do not have a `new_child` function
  --> $DIR/new_fns_in_mixin.rs:10:8
   |
10 |     fn new_child() -> NilUiNode {
   |        ^^^^^^^^^

error: widget mixins do not have a `new` function
 --> $DIR/new_fns_in_mixin.rs:7:8
  |
7 |     fn new(child: impl UiNode) -> impl UiNode {
  |        ^^^
